@@ -57,6 +57,7 @@ import org.apache.hadoop.yarn.logaggregation.AggregatedLogFormat.LogKey;
 import org.apache.hadoop.yarn.logaggregation.AggregatedLogFormat.LogReader;
 import org.apache.hadoop.yarn.logaggregation.AggregatedLogFormat.LogValue;
 import org.apache.hadoop.yarn.logaggregation.AggregatedLogFormat.LogWriter;
+import org.apache.hadoop.yarn.util.Times;
 import org.junit.After;
 import org.junit.Assume;
 import org.junit.Before;
@@ -178,9 +179,16 @@ public class TestAggregatedLogFormat {
     logWriter.close();
   }
 
-  //Verify the output generated by readAContainerLogs(DataInputStream, Writer)
   @Test
   public void testReadAcontainerLogs1() throws Exception {
+    //Verify the output generated by readAContainerLogs(DataInputStream, Writer, logUploadedTime)
+    testReadAcontainerLog(true);
+
+    //Verify the output generated by readAContainerLogs(DataInputStream, Writer)
+    testReadAcontainerLog(false);
+  }
+
+  private void testReadAcontainerLog(boolean logUploadedTime) throws Exception {
     Configuration conf = new Configuration();
     File workDir = new File(testWorkDir, "testReadAcontainerLogs1");
     Path remoteAppLogFile =
@@ -233,17 +241,23 @@ public class TestAggregatedLogFormat {
     LogKey rLogKey = new LogKey();
     DataInputStream dis = logReader.next(rLogKey);
     Writer writer = new StringWriter();
-    LogReader.readAcontainerLogs(dis, writer);
-    
+
+    if (logUploadedTime) {
+      LogReader.readAcontainerLogs(dis, writer, System.currentTimeMillis());
+    } else {
+      LogReader.readAcontainerLogs(dis, writer);
+    }
+
     // We should only do the log aggregation for stdout.
     // Since we could not open the fileInputStream for stderr, this file is not
     // aggregated.
     String s = writer.toString();
     int expectedLength =
-        "\n\nLogType:stdout".length()
-            + ("\nLogUploadTime:" + System.currentTimeMillis()).length()
+        "LogType:stdout".length()
+            + (logUploadedTime ? ("\nLog Upload Time:" + Times.format(System
+              .currentTimeMillis())).length() : 0)
             + ("\nLogLength:" + numChars).length()
-            + "\nLog Contents:\n".length() + numChars;
+            + "\nLog Contents:\n".length() + numChars + "\n".length();
     Assert.assertTrue("LogType not matched", s.contains("LogType:stdout"));
     Assert.assertTrue("log file:stderr should not be aggregated.", !s.contains("LogType:stderr"));
     Assert.assertTrue("log file:logs should not be aggregated.", !s.contains("LogType:logs"));
