@@ -767,30 +767,27 @@ public class TestLogAggregationService extends BaseContainerManagerTest {
           try {
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
             PrintStream ps = new PrintStream(baos);
+
             LogReader.readAContainerLogsForALogType(valueStream, ps);
 
             String writtenLines[] = baos.toString().split(
               System.getProperty("line.separator"));
 
             Assert.assertEquals("LogType:", writtenLines[0].substring(0, 8));
-            String fileType = writtenLines[0].substring(9);
+            String fileType = writtenLines[0].substring(8);
 
-            Assert.assertEquals("LogUploadTime:", writtenLines[1].substring(0, 14));
-            String fileUploadedTimeStr = writtenLines[1].substring(15);
-
-            Assert.assertEquals("LogLength:", writtenLines[2].substring(0, 10));
-            String fileLengthStr = writtenLines[2].substring(11);
+            Assert.assertEquals("LogLength:", writtenLines[1].substring(0, 10));
+            String fileLengthStr = writtenLines[1].substring(10);
             long fileLength = Long.parseLong(fileLengthStr);
 
             Assert.assertEquals("Log Contents:",
-              writtenLines[3].substring(0, 13));
+              writtenLines[2].substring(0, 13));
 
             String logContents = StringUtils.join(
-              Arrays.copyOfRange(writtenLines, 4, writtenLines.length), "\n");
+              Arrays.copyOfRange(writtenLines, 3, writtenLines.length), "\n");
             perContainerMap.put(fileType, logContents);
 
             LOG.info("LogType:" + fileType);
-            LOG.info("LogUploadTime:" + fileUploadedTimeStr);
             LOG.info("LogLength:" + fileLength);
             LOG.info("Log Contents:\n" + perContainerMap.get(fileType));
           } catch (EOFException eof) {
